# neurograph

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/eval/: qa_pairs.json
data/sample_pdfs/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTERVIEW_NOTES.md
neurograph/: __init__.py  config.py
neurograph/api/: main.py
neurograph/cache/: __init__.py  semantic_cache.py
neurograph/eval/: __init__.py  generation_metrics.py  retrieval_metrics.py  runner.py
neurograph/generation/: __init__.py  llm_client.py  prompts.py  qa.py
neurograph/indexing/: __init__.py  cypher_builder.py  entity_resolver.py  graph_store.py  triplet_extractor.py  vector_store.py
neurograph/ingestion/: __init__.py  chunker.py  cleaner.py  loader.py  pipeline.py
neurograph/retrieval/: __init__.py  graph_retriever.py  hybrid.py  vector_retriever.py
neurograph/ui/: app.py
scripts/: check_neo4j.py  clear_cache.py  download_samples.py  ingest.py  query.py  run_eval.py
tests/: test_chunker.py  test_cleaner.py  test_cypher_builder.py  test_entity_resolver.py  test_eval_metrics.py  test_graph_retriever.py  test_hybrid_format.py  test_semantic_cache.py  test_smoke.py  test_triplet_extractor.py
